# push-notifications-service

./: Cargo.toml  flake.nix  garnix.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result  servers.nix
.github/workflows/: build-and-cache-provider.yml  test.yaml  update-flake-inputs.yaml
crates/push_notifications_service_client/: Cargo.toml  default.nix
crates/push_notifications_service_client/src/: lib.rs  main.rs  setup.rs
crates/push_notifications_service_client/tests/: common.rs  send_push_notification.rs
crates/push_notifications_service_provider/: Cargo.toml  default.nix
crates/push_notifications_service_provider/src/: cloned_services.rs  dynamic_provider.rs  fcm_client.rs  lib.rs  main.rs  send_push_notification.rs  setup.rs  static_provider.rs
crates/push_notifications_service_provider/tests/: common.rs  send_push_notification.rs
crates/push_notifications_service_trait/: Cargo.toml
crates/push_notifications_service_trait/src/: lib.rs
crates/push_notifications_types/: Cargo.toml
crates/push_notifications_types/src/: lib.rs
dnas/happ_care_service/workdir/: dna.nix  dna.yaml
dnas/push_notifications_service/: dna.nix
dnas/push_notifications_service/workdir/: dna.nix  dna.yaml
dnas/push_notifications_service/zomes/coordinator/push_notifications_service/: Cargo.toml  zome.nix
dnas/push_notifications_service/zomes/coordinator/push_notifications_service/src/: fcm_token.rs  lib.rs  send_push_notification_to_agent.rs  service_account_key.rs
dnas/push_notifications_service/zomes/coordinator/push_notifications_service/tests/: service_account_key.rs
dnas/push_notifications_service/zomes/coordinator/push_notifications_service/tests/common/: mod.rs
dnas/push_notifications_service/zomes/coordinator/push_notifications_service_providers_manager/src/: service_providers.rs
dnas/push_notifications_service/zomes/integrity/push_notifications_service/: Cargo.toml  zome.nix
dnas/push_notifications_service/zomes/integrity/push_notifications_service/src/: fcm_project_path.rs  fcm_token.rs  lib.rs  service_account_key.rs
dnas/push_notifications_service/zomes/integrity/push_notifications_service_providers_manager/src/: clone_service_request.rs  lib.rs  service_providers.rs
dnas/push_notifications_service_providers_manager/: dna.nix
dnas/push_notifications_service_providers_manager/workdir/: dna.nix  dna.yaml
dnas/push_notifications_service_providers_manager/zomes/coordinator/push_notifications_service_providers_manager/: Cargo.toml  zome.nix
dnas/push_notifications_service_providers_manager/zomes/coordinator/push_notifications_service_providers_manager/src/: all_clone_service_requests.rs  clone_service_request.rs  lib.rs  service_providers.rs
dnas/push_notifications_service_providers_manager/zomes/integrity/push_notifications_service_providers_manager/: Cargo.toml  zome.nix
dnas/push_notifications_service_providers_manager/zomes/integrity/push_notifications_service_providers_manager/src/: clone_service_request.rs  lib.rs
dnas/service_providers/: dna.nix
dnas/service_providers/zomes/coordinator/push_notifications_gateway/: Cargo.toml  zome.nix
dnas/service_providers/zomes/coordinator/push_notifications_gateway/src/: lib.rs  push_notifications_service.rs
docs/: index.md  introduction.md  package.json  push-notification-flow.md  push-notifications-service-provider-store.md  setup.md
docs/.vitepress/: config.mts
docs/elements/: all-clone-service-requests.md  create-service-account-key.md  service-account-key-detail.md  service-account-key-summary.md
tests/: package.json  test-happs.nix
tests/src/: send-push-notification.test.ts  service-account-key.test.ts  setup.ts
tests/src/push_notifications_service/push_notifications_service/: service-account-keys.test.ts
ui/: package.json
ui/demo/: index.html
ui/src/: context.ts  index.ts  mocks.ts  push-notifications-service-client.ts  push-notifications-service-provider-client.ts  push-notifications-service-provider-store.ts  push-notifications-service-store.ts  types.ts  utils.ts
ui/src/elements/: add-fcm-project.ts  all-fcm-projects.ts  manage-push-notifications-service.ts  push-notifications-service-context.ts  push-notifications-service-provider-context.ts
workdir/: dna.nix  happ.nix  happ.yaml
zomes/coordinator/push_notifications_service_providers_manager/tests/: all_clone_service_requests.rs
