[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.501.0"

[workspace.dependencies]
hdi = "0.6"
hdk = "0.5"
kitsune2_bootstrap_srv = "0.1"
holochain_serialized_bytes = "*"
serde = "1"

[patch.crates-io]
kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
