[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.7.0-dev"
hdk = "0.6.0-dev"
kitsune2_bootstrap_srv = "0.2"
holochain_serialized_bytes = "*"
serde = "1"

[patch.crates-io]
kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
