[package]
name = "push-notifications-service-client"
version = "0.600.0-dev.0"
edition = "2021"

[lib]
name = "push_notifications_service_client"
path = "src/lib.rs"

[[bin]]
name = "push-notifications-service-client"
path = "src/main.rs"

[dependencies]
holochain_runtime = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "main-0.6" }
holochain = "0.6.0-dev"
holochain_util = "0.6.0-dev"
holochain_client = "0.8.0-dev"
holochain_conductor_api = "0.6.0-dev"
holochain_types = "0.6.0-dev"

futures = "0.3"
anyhow = "1"
clap = {version = "4.5.4", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] } 
mr_bundle = "0.5"
sha256 = "1"
url2 = "0.0.6"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

yup-oauth2 = "12"
fcm_v1 = "0.3"
serde_yaml = "0.9"
serde_json = "1"
mockall = "0.13"

clone_manager_types = { git = "https://github.com/darksoil-studio/clone-manager-zome", branch = "main-0.6"}
clone_manager_utils = { git = "https://github.com/darksoil-studio/clone-manager-zome", branch = "main-0.6"}

service_providers_types = { git = "https://github.com/darksoil-studio/service-providers", branch = "main-0.6"}
service_providers_utils = { git = "https://github.com/darksoil-studio/service-providers", branch = "main-0.6"}
push_notifications_types = { path = "../push_notifications_types" }
push_notifications_service_trait = { path = "../push_notifications_service_trait" }
roles_types = { git = "https://github.com/darksoil-studio/roles-zome", branch = "main-0.6"}

tempdir = "0.3"
colored = "2"
