[package]
name = "push-notifications-service-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
holochain_runtime = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "main-0.4" }
holochain = "0.4"
holochain_client = "0.6.0"
holochain_conductor_api = "0.4.1"
anyhow = "1"
clap = {version = "4.5.4", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] } 
holochain_types = "0.4.1"
mr_bundle = "0.4.1"
sha256 = "1"
url2 = "0.0.6"
tx5-signal = "0.1.5-beta"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

yup-oauth2 = "8"
fcm_v1 = "0.3"
serde_json = "1"


push_notifications_types = { path = "../push_notifications_types" }
