[package]
name = "push-notifications-service-provider"
version = "0.1.0"
edition = "2021"

[lib]
name = "push_notifications_service_provider"
path = "src/lib.rs"

[[bin]]
name = "push-notifications-service-provider"
path = "src/main.rs"

[dependencies]
holochain_runtime = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "main-0.4" }
holochain = "0.4"
holochain_util = "0.4"
holochain_client = "0.6.0"
holochain_conductor_api = "0.4.1"
anyhow = "1"
clap = {version = "4.5.4", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] } 
holochain_types = "0.4.1"
mr_bundle = "0.4.1"
sha256 = "1"
url2 = "0.0.6"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
futures = "0.3"

yup-oauth2 = "8"
fcm_v1 = "0.3"
serde_yaml = "0.9"
serde_json = "1"
mockall = "0.13"

clone_manager_types = { git = "https://github.com/darksoil-studio/clone-manager-zome", branch = "main-0.4"}
clone_manager_utils = { git = "https://github.com/darksoil-studio/clone-manager-zome", branch = "main-0.4"}

service_providers_types = { git = "https://github.com/darksoil-studio/service-providers", branch = "main-0.4"}
push_notifications_types = { path = "../push_notifications_types" }
push_notifications_service_trait = { path = "../push_notifications_service_trait" }
roles_types = { git = "https://github.com/darksoil-studio/roles-zome", branch = "main-0.4"}

[dev-dependencies]
tempdir = "0.3.7"
serde_yaml = "0.9"
