[package]
name = "push_notifications_service"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_service"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

push_notifications_service_integrity = { path = "../../integrity/push_notifications_service" }
push_notifications_types = { path = "../../../../../crates/push_notifications_types" }
