[package]
name = "push_notifications_service_integrity"
version = "0.501.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_service_integrity"

[dependencies]
hdi = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

push_notifications_types = { path = "../../../../../crates/push_notifications_types" }
