[package]
name = "push_notifications_service_providers_manager"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_service_providers_manager"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

push_notifications_service_providers_manager_integrity = { path = "../../integrity/push_notifications_service_providers_manager" }
