[package]
name = "push_notifications_service_providers_manager_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_service_providers_manager_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

push_notifications_types = { path = "../../../../../crates/push_notifications_types" }
