[package]
name = "push_notifications_gateway"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_gateway"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }

push_notifications_service_trait = { path = "../../../../../crates/push_notifications_service_trait" }
