[package]
name = "push_notifications_gateway"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "push_notifications_gateway"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }

push_notifications_service_trait = { path = "../../../../../crates/push_notifications_service_trait" }
push_notifications_types = { path = "../../../../../crates/push_notifications_types" }
